fix layout issue with funnel

--- a/app/static/css/maps.css
+++ b/app/static/css/maps.css
@@ -84,12 +84,16 @@
 }
 
 .sidebar-panel-item {
+  padding-top: 1rem;
   padding-right: 1.5rem;
+  padding-bottom: 1rem;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .sidebar-panel-item-icon {
   width: 2rem;
-  float: right;
+  text-align: center;
 }
 
 .sidebar-panel-item-icon img {
@@ -279,15 +283,13 @@ button {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-.sidebar-panel-item {
-  height: 3rem;
-  padding-top: 1rem;
-}
-
 .sidebar-panel-item-title {
   padding-left: 2.75rem;
   color: #464646;
-  display: inline;
+}
+
+p.sidebar-panel-item-title {
+  margin-bottom: 0;
 }
 
 .sidebar-panel-item-title-filter {
@@ -304,7 +306,7 @@ button {
 }
 
 .sidebar-panel-item-filter {
-  height: 3.5rem;
+  height: auto;
   padding-top: 1rem;
 }
 
@@ -327,6 +329,7 @@ button {
 
 .sidebar-panel-item-button {
   float: right;
+  transform: translateY(3px);
 }
 
 .sidebar-panel-content {
